01-kubernetes/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress
  namespace: applications

spec:
  ingressClassName: nginx

  rules:
  - host: nginx.lab.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: nginx-service

            port:

              number: 80
